# HumanoidVerse3

./: .gitignore  Commands.md  LICENSE  README.md  README_V2.md  README_V3.md  README_V3_zh.md  README_zh.md  pyproject.toml  setup.py
MotionHub/: README.md
MotionHub/robot_motion_process/: motion_interpolation_pkl.py  vis_q_mj.py
MotionHub/smpl_motion/g1_retargeted_npy/: smpl.npy
MotionHub/smpl_retarget/mink_retarget/: convert_fit_motion.py
humanoid_sim2real/: README_sim2sim_setup.md
humanoid_sim2real/configs/: g1_ref.yaml  g1_ref_kungfu.yaml  g1_ref_real.yaml  g1_ref_real_kungfu.yaml
humanoid_sim2real/deployment_scripts/: hardware_whole_body_G1_23dof_asap_ref.py  hardware_whole_body_G1_23dof_kungfu.py  hardware_whole_body_G1_23dof_kungfu_merged.py  hardware_whole_body_G1_locomotion.py  lowcmd_publisher.py
humanoid_sim2real/isaac_utils/: rotations.py
humanoid_sim2real/motion_lib/: motion_lib_base.py  motion_lib_robot.py  motion_lib_robot_WJX.py  skeleton.py  torch_humanoid_batch.py
humanoid_sim2real/sim2sim/: sim2sim.py
humanoid_sim2real/unitree_hg/: msg.py
humanoidverse/: eval_agent.py  ratio_eps.py  sample_eps.py  train_agent.py  train_agent_debug.py  urci.py
humanoidverse/config/algo/: ppo.yaml
humanoidverse/deploy/: mujoco.py  urcirobot.py
humanoidverse/utils/: average_meters.py
motion_lib/: motion_lib_base.py  motion_lib_robot.py
robot_motion_process/: vis_q_mj.py
tools/isaac_utils/: rotations.py
tools/motion_lib/: motion_lib_base.py  motion_lib_robot.py  skeleton.py  torch_humanoid_batch.py
(+35 files in other folders)
